<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_sort"
        android:icon="@mipmap/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="3"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_fav"
                    android:title="@string/action_fav"
                    android:orderInCategory="3"
                    app:showAsAction="never"/>

                <item android:id="@+id/action_top"
                    android:title="@string/action_top"
                    android:orderInCategory="2"
                    app:showAsAction="never"/>

                <item android:id="@+id/action_pop"
                    android:title="@string/action_pop"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:checked="true"/>
            </group>
        </menu>
    </item>

</menu>