<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/detailCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardPreventCornerOverlap="false"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"/>
        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <LinearLayout
                android:id="@+id/dateLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/date_calendar"
                    android:tint="@color/shade"/>
                <TextView
                    android:id="@+id/detailDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/durLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateLinear"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/de_duration"
                    android:tint="@color/shade"/>
                <TextView
                    android:id="@+id/detailDur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/voteLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:layout_below="@id/durLinear">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/star_vote"
                    android:tint="@color/shade"/>
                <TextView
                    android:id="@+id/detailVoteAvr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/detailUnFav"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:padding="12dp"
                android:src="@mipmap/un_favorite"
                android:clickable="true"
                android:tint="#9e9e9e" />
            <ImageView
                android:id="@+id/detailFav"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:padding="12dp"
                android:src="@mipmap/favorite"
                android:clickable="true"
                android:tint="#ed4956"
                android:visibility="gone"/>

        </FrameLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="1dp"
        android:background="#c7d2d2d2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overView"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        fontPath="fonts/Bold.ttf"/>

    <TextView
        android:id="@+id/detailOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c7d2d2d2"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fontPath="fonts/Bold.ttf"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"
        android:textSize="18sp"
        android:text="@string/trailers"
        android:textColor="@android:color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/detail_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:divider="@android:color/transparent"
            android:scrollbars="none"/>

        <TextView
            android:id="@+id/noTrails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/no_trailers"
            android:textSize="16sp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c7d2d2d2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/revsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>
        <TextView
            android:id="@+id/noRevs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingBottom="12dp"
            android:text="@string/no_reviews"
            android:textSize="16sp"
            android:visibility="gone"/>

    </RelativeLayout>
</LinearLayout>